Added basic templates for front page.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,18 @@
 !!!
 %html
   %head
-    %title P4IDX
+    %title == #{LONG_SITE_NAME}
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
+
+    - cache 'header' do
+      %meta{ :content => 'text/html; charset=UTF-8', "http-equiv" => "Content-Type" }
   %body
-    = yield
+    #wrap
+      = render :partial => 'layouts/header'
+      #main_content
+        = render :partial => 'layouts/flash_messages'
+        = yield
+      - cache 'footer' do
+        = render :partial => 'layouts/footer'
