--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,3 +3,14 @@
     %h1#logo= link_to LONG_SITE_NAME, root_path
     #nav-primary
       / -cache('primary_nav') do
+      %ul.nav.user
+      - if user_signed_in?
+        / %li.first= link_to "#{h current_user.name}" , profile_url(current_user)
+        %li= link_to 'Settings', edit_user_registration_path
+        %li= link_to "About", home_about_path
+        %li= link_to 'Log Out', destroy_user_session_path, method: :delete
+      - else
+        -cache('no_user_nav') do
+          %li.first= link_to "About", home_about_path
+          %li= link_to "Sign Up", new_user_registration_path
+          %li=link_to 'Log in', new_user_session_path
