--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,21 +1,21 @@
-%h1 Listing users
+/ %h1 Listing users
 
-%table
-  %tr
-    %th Name
-    %th Email
-    %th
-    %th
-    %th
+/ %table
+/   %tr
+/     %th Name
+/     %th Email
+/     %th
+/     %th
+/     %th
 
-  - @users.each do |user|
-    %tr
-      %td= user.name
-      %td= user.email
-      %td= link_to 'Show', user
-      %td= link_to 'Edit', edit_user_path(user)
-      %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
+/   - @users.each do |user|
+/     %tr
+/       %td= user.name
+/       %td= user.email
+/       %td= link_to 'Show', user
+/       %td= link_to 'Edit', edit_user_path(user)
+/       %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-%br
+/ %br
 
-= link_to 'New User', new_user_path
+/ = link_to 'New User', new_user_path
