--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,12 +1,12 @@
-%p#notice= notice
+/ %p#notice= notice
 
-%p
-  %b Name:
-  = @user.name
-%p
-  %b Email:
-  = @user.email
+/ %p
+/   %b Name:
+/   = @user.name
+/ %p
+/   %b Email:
+/   = @user.email
 
-= link_to 'Edit', edit_user_path(@user)
-\|
-= link_to 'Back', users_path
+/ = link_to 'Edit', edit_user_path(@user)
+/ \|
+/ = link_to 'Back', users_path
