Fixed syntax for rendering partial.
Form had an extra comma, expecting other parameters for the form tag.
The partial for ideas needed its location to be specified.

--- a/app/views/ideas/_new.html.haml
+++ b/app/views/ideas/_new.html.haml
@@ -1,4 +1,4 @@
-= form_for :idea, :url => ideas_path, do |f|
+= form_for :idea, :url => ideas_path do |f|
   #idea-title.form-group.inline
     = f.label :title, "Idea"
     = f.text_field :title, :example => "My ideas is...", :maxlength => 120, :id => "new-idea-title"
@@ -6,7 +6,6 @@
     = f.label :description, "Description"
     = f.text_area :description, :example => "It would be great if...", :id => "new-idea-description", :rows => "7", :columns => "20"
   #idea-tags.form-group.inline
-    =
     = submit_tag 'Share my idea'
   %p
     %strong<>
