Display comments in idea#show views.
Comments for each idea should be shown below the idea's title
and description.

--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -1,3 +1,6 @@
 %div
   %h2= h @idea.title
   %p=    @idea.description
+  %div
+    %h3 Comments
+    %div= render :template =>  'comments/show', :collection => @idea.comments, :controller => 'comments'
