Render '_comment' for each shown comment.
Simply render the '_comment' partial each time a comment needs
to be shown.

--- a/app/views/comments/show.html.haml
+++ b/app/views/comments/show.html.haml
@@ -1,2 +1,1 @@
-%h1 Comments#show
-%p Find me in app/views/comments/show.html.haml
+= render :partial => 'comments/comment', :locals => { :comment => @comment }
