--- a/app/views/comments/show.html.haml
+++ b/app/views/comments/show.html.haml
@@ -1,1 +1,1 @@
-= render :partial => 'comments/comment', :locals => { :comment => @comment }
+= render partial: 'comments/comment', :locals => { :comment => @comment }
