Idea views render 'comments/comment' partial.
When showing an idea, render the 'comments/comment' partial to show
information about each comment in the collection belonging to the
idea.

--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -3,4 +3,4 @@
   %p=    @idea.description
   %div
     %h3 Comments
-    %div= render :template =>  'comments/show', :collection => @idea.comments, :controller => 'comments'
+    %div= render :partial =>  'comments/comment', :collection => @idea.comments, :controller => 'comments'
