--- a/app/views/comments/_new.html.haml
+++ b/app/views/comments/_new.html.haml
@@ -1,3 +1,3 @@
 = form_for :comment, :url => idea_comments_path do |f|
-  = f.text_area :text
+  = f.text_area :text, :class => "input-textarea", :rows => "7", :columns => "20"
   = submit_tag "Post Comment", :class => "input-submit"
