--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -3,4 +3,8 @@
   %p=    @idea.description
   %div
     %h3 Comments
-    %div= render :partial =>  'comments/comment', :collection => @idea.comments, :controller => 'comments'
+    %div= render :partial => 'comments/comment', :collection => @idea.comments, :controller => 'comments'
+    %div
+      = if user_signed_in?
+        %h4 Comment on this idea
+        %div= render :partial => 'comments/new'
