Add 'owner_id' param to Idea creation
Add a hidden 'owner_id' field to the idea form. This parameter is
required for idea creation and is part of the parameters permitted
through the controller.

--- a/app/views/ideas/_new.html.haml
+++ b/app/views/ideas/_new.html.haml
@@ -1,4 +1,5 @@
 = form_for :idea, :url => ideas_path do |f|
+  = f.hidden_field :owner_id, :value => current_user.id
   #idea-title.form-group.inline
     = f.label :title, "Idea"
     = f.text_field :title, :example => "My ideas is...", :maxlength => 120, :id => "new-idea-title"
