--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -2,6 +2,9 @@
   %h2= h @idea.title
   %p=    @idea.description
   %div
+    %h5 Tags
+    = @idea.tags.map { |tag| link_to h(tag.name), idea_search_path(:search => ['tag', tag.name]) }.join(', ')
+  %div
     %h3 Comments
     %div= render :partial => 'comments/comment', :collection => @idea.comments, :controller => 'comments'
     %div
