Make links to tags use POST method
'link_to' defaults to GET. Specify a POST request to properly match the
search_ideas route.

--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -3,7 +3,7 @@
   %p=    @idea.description
   %div
     %h5 Tags
-    = @idea.tags.map { |tag| link_to h(tag.name), search_ideas_path(:search => ['tag', tag.name]) }.join(', ')
+    = @idea.tags.map { |tag| link_to h(tag.name), search_ideas_path(:search => ['tag', tag.name]), :method => :post }.join(', ')
   %div
     %h3 Comments
     %div= render :partial => 'comments/comment', :collection => @idea.comments, :controller => 'comments'
