--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -1,3 +1,3 @@
 %div
   %div
-    = render :partial => 'ideas/idea_teaser', :collection => idea_objects_list
+    = render :partial => 'ideas/idea_teaser', :collection => idea_objects_list, :as => :idea
