--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -63,22 +63,22 @@
       #popular-ideas.panel.summary.hfeed
         .header
           %h3.icon.popular
-            What's Hot
+            Popular
           %ul.actions
         .body.ideas
-          = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'hot', :page_size => 5)
+          = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'popular', :page_size => 5)
         .footer
           .pagination
-            = link_to 'More', search_ideas_path(:search => 'top-rated')
+            = link_to 'More', search_ideas_path(:search => 'popular')
     .ideas-group
       #recent-ideas.panel.summary.hfeed
         .header
           %h3.icon.recent
-            Recent Ideas
-          %ul.actions
-            %li= link_to image_tag("icn/16-sq-rss.png", :alt => "Subscribe to these ideas"), "/ideas.rss"
+            New
+          / %ul.actions
+          /   %li= link_to image_tag("icn/16-sq-rss.png", :alt => "Subscribe to these ideas"), "/ideas.rss"
         .body.ideas
-          = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'recent', :page_size => 5)
+          = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'new', :page_size => 5)
         .footer
           .pagination
-            = link_to 'More', search_ideas_path(:search => 'recent')
+            = link_to 'More', search_ideas_path(:search => 'new')
