Fix 'ideas/show' template
Execute the 'if' statement, don't render the output.

--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -10,6 +10,6 @@
     %h3 Comments
     %div= render :partial => 'comments/comment', :collection => @idea.comments, :controller => 'comments'
     %div
-      = if user_signed_in?
+      - if user_signed_in?
         %h4 Comment on this idea
         %div= render :partial => 'comments/new'
