--- a/app/views/tags/_tag_editor.html.haml
+++ b/app/views/tags/_tag_editor.html.haml
@@ -1,3 +1,3 @@
 = f.autocomplete_field :tag_names, autocomplete_tag_name_ideas_path,
    'data-delimiter' => ',', :multiple => true,
-   :example => EXAMPLE_TAGS, :class => "input-text big"
+   :placeholder => EXAMPLE_TAGS, :class => "input-text big"
