--- a/app/views/ideas/_new.html.haml
+++ b/app/views/ideas/_new.html.haml
@@ -2,10 +2,10 @@
   = f.hidden_field :owner_id, :value => current_user.id
   #idea-title.form-group.inline
     = f.label :title, "Idea"
-    = f.text_field :title, :example => "My ideas is...", :maxlength => 120, :id => "new-idea-title"
+    = f.text_field :title, :placeholder => "My ideas is...", :maxlength => 120, :id => "new-idea-title"
   #idea-description.form-group.inline
     = f.label :description, "Description"
-    = f.text_area :description, :example => "It would be great if...", :id => "new-idea-description", :rows => "7", :columns => "20"
+    = f.text_area :description, :placeholder => "It would be great if...", :id => "new-idea-description", :rows => "7", :columns => "20"
   #idea-tags.form-group.inline
     %label{:for => "tags"} Tags
     = render :partial => 'tags/tag_editor', :locals => { :f => f }
