--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -18,4 +18,6 @@
     %br/
     = f.password_field :password_confirmation, autocomplete: "off"
   %div= f.submit "Sign up"
+%p or
+= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter)
 = render "users/shared/links"
