--- a/app/views/users/shared/_links.haml
+++ b/app/views/users/shared/_links.haml
@@ -15,5 +15,6 @@
   %br/
 - if devise_mapping.omniauthable?
   - resource_class.omniauth_providers.each do |provider|
-    = link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider)
+    - if eval("#{provider.upcase}_ENABLED")
+      = link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider)
     %br/
