Fix link rendering in Tag partial
Fix the rendering of tag links when showing the tag partial.

--- a/app/views/tags/_tag.html.haml
+++ b/app/views/tags/_tag.html.haml
@@ -1,3 +1,1 @@
--# %a{ :href => idea_search_path(:search => ['tag', tag.name]) }
-== #{h(tag.name)}
--# %span== (#{h(tag.idea_count)})
+= link_to("#{h(tag.name)} (#{h(tag.ideas.length)})", tag_path(tag))
