Fix tag link rendering in Idea views
HAML/Ruby were having issues correctly rendering the links with the old
syntax. Breaking up the statement into a Ruby line '-' and a HAML line
'=' fixes the issue and links should render correctly.

--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -5,7 +5,8 @@
   %p=    @idea.description
   %div
     %h5 Tags
-    = @idea.tags.map { |tag| link_to h(tag.name), search_ideas_path(:search => ['tag', tag.name]), :method => :post }.join(', ')
+    - @idea.tags.each do |tag|
+      = render :partial => 'tags/tag', :locals => { :tag => tag }
   %div
     %h3 Comments
     %div= render :partial => 'comments/comment', :collection => @comments, :controller => 'comments'
