Fix some home page formatting

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,84 +1,85 @@
-#into.section
-  .header
-    %h2== Have an idea for #{COMPANY_NAME}?
-    %p
-      We're constantly looking for new ways to improve our business and are asking you to help us by
-      %strong sharing
-      your own ideas,
-      %strong voting
-      for ideas you like, and
-      %strong discussing
-      them with the rest of the community.
-  - if user_signed_in?
-    %h3
-      %em Share Ideas Now
-    = render :partial => 'ideas/new'
-  - else
-    %h3
-      %em Get Started Now
-      %small or
-      = link_to "Sign Up", new_user_registration_path
+%div
+  #into.section
+    .header
+      %h2== Have an idea for #{COMPANY_NAME}?
+      %p
+        We're constantly looking for new ways to improve our business and are asking you to help us by
+        %strong sharing
+        your own ideas,
+        %strong voting
+        for ideas you like, and
+        %strong discussing
+        them with the rest of the community.
+    - if user_signed_in?
+      %h3
+        %em Share Ideas Now
+      .body#submit-idea
+        = render :partial => 'ideas/new', :locals => { :small => true }
+    - else
+      %h3
+        = link_to "Sign Up", new_user_registration_path
+        %em to Get Started Now
 
-#instructions.section
-  %h2.header
-    This is how it works.
-    %em
-      Really, it's this easy.
-  .instruction.one
-    %h3
-      %em Share
-      Your Ideas
-    .figure
-      = image_tag "instruction-1-share-thumb.png", :alt => "Share Your Ideas"
-      %p.legend What's your idea? Big or small. We want to hear it. The future starts here.
-  .instruction.two
-    %h3
-      %em Vote
-      for Good Ideas
-    .figure
-      = image_tag "instruction-2-vote-thumb.png", :alt => "Vote for Good Ideas"
-      %p.legend Like an idea? Vote it up. Tell your friends to vote it up. Let's hear it.
-  .instruction.three
-    %h3
-      %em Discuss
-      with Others
-    .figure
-      = image_tag "instruction-3-discuss-thumb.png", :alt => "Discuss with Others"
-      %p.legend Post your comments and build on an idea. Connect with us directly. Let's make something happen.
-  .instruction.four
-    %h3
-      %em Read
-      our Feedback
-    .figure
-      = image_tag "instruction-4-read-thumb.png", :alt => "Read our Feedback"
-      %p.legend= "We're posting in the comments and on #{link_to 'our blog', '#'}. Let's keep the conversation going."
-  %hr.hide
-
-  #ideas.section
+  #instructions.section
     %h2.header
-      Here are some ideas.
+      This is how it works.
       %em
-        This should get you started.
-    .ideas-group
-      #popular-ideas.panel.summary.hfeed
-        .header
-          %h3.icon.popular
-            Popular
-          %ul.actions
-        .body.ideas
-          = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'popular', :page_size => 5)
-        .footer
-          .pagination
-            = link_to 'More', search_ideas_path(:search => 'popular')
-    .ideas-group
-      #recent-ideas.panel.summary.hfeed
-        .header
-          %h3.icon.recent
-            New
-          / %ul.actions
-          /   %li= link_to image_tag("icn/16-sq-rss.png", :alt => "Subscribe to these ideas"), "/ideas.rss"
-        .body.ideas
-          = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'new', :page_size => 5)
-        .footer
-          .pagination
-            = link_to 'More', search_ideas_path(:search => 'new')
+        Really, it's this easy.
+    .instruction.one
+      %h3
+        %em Share
+        Your Ideas
+      .figure
+        = image_tag "instruction-1-share-thumb.png", :alt => "Share Your Ideas"
+        %p.legend What's your idea? Big or small. We want to hear it. The future starts here.
+    .instruction.two
+      %h3
+        %em Vote
+        for Good Ideas
+      .figure
+        = image_tag "instruction-2-vote-thumb.png", :alt => "Vote for Good Ideas"
+        %p.legend Like an idea? Vote it up. Tell your friends to vote it up. Let's hear it.
+    .instruction.three
+      %h3
+        %em Discuss
+        with Others
+      .figure
+        = image_tag "instruction-3-discuss-thumb.png", :alt => "Discuss with Others"
+        %p.legend Post your comments and build on an idea. Connect with us directly. Let's make something happen.
+    .instruction.four
+      %h3
+        %em Read
+        our Feedback
+      .figure
+        = image_tag "instruction-4-read-thumb.png", :alt => "Read our Feedback"
+        %p.legend= "We're posting in the comments and on #{link_to 'our blog', '#'}. Let's keep the conversation going."
+    %hr.hide
+
+    #ideas.section
+      %h2.header
+        Here are some ideas.
+        %em
+          This should get you started.
+      .ideas-group
+        #popular-ideas.panel.summary.hfeed
+          .header
+            %h3.icon.popular
+              Popular
+            %ul.actions
+          .body.ideas
+            = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'popular', :page_size => 5)
+          .footer
+            .pagination
+              = link_to 'More', search_ideas_path(:search => 'popular')
+      .ideas-group
+        #recent-ideas.panel.summary.hfeed
+          .header
+            %h3.icon.recent
+              New
+            / %ul.actions
+            /   %li= link_to image_tag("icn/16-sq-rss.png", :alt => "Subscribe to these ideas"), "/ideas.rss"
+          .body.ideas
+            = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'new', :page_size => 5)
+          .footer
+            .pagination
+              = link_to 'More', search_ideas_path(:search => 'new')
