Add custom about page partial
Render the custom About partial from the main about page.

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,2 +1,4 @@
-%h1 Home#about
-%p Find me in app/views/home/about.html.haml
+%div
+  .main.panel
+    .header
+      = render :partial => 'custom/about'
