Add voting partial back into idea/show view
When moving over the old template + stylings, forgot to add in the idea
voting partial.

--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -25,7 +25,8 @@
       .idea-meta
         %div
           %ul.entry-meta
-            / %li.comments
+            %li.votes
+              %div= render :partial => 'votes/vote'
             %li.tags
               %h3 Tags
               - @idea.tags.each do |tag|
