Pass User record to user profile helper
Pass which user record needs to be shown in the profile view when a
user clicks the author's name link.

--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -10,7 +10,7 @@
         %abbr.published.time-relative== #{@idea.created_at}
         by
         %span.vcard.author
-          = link_to h(@idea.owner.name), user_profile_path
+          = link_to h(@idea.owner.name), user_profile_path(@idea.owner)
         %br
         - if !@idea.current.nil? && @idea.current.id != Current::DEFAULT_CURRENT_ID
           Part of:
