--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -1,2 +1,15 @@
-%h1 Home#contact
-%p Find me in app/views/home/contact.html.haml
+%h2 Give Us A Shout
+%p Have any questions about BBYIDX or want to give us feedback? Feel free to get in touch.
+%h3 Email
+%strong
+  = mail_to "info@bbyidx.com", 'info@bbyidx.com', :encode => 'hex'
+%p
+%h3 Address
+%p
+  Best Buy, Inc.
+  %br
+  7601 Penn Ave. S.
+  %br
+  Richfield, MN 55423-3645
+.error
+  %b Replace text in app/views/custom/* with your own company-specific info.
