--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,19 +3,18 @@
     %h4 Ideas
     %ul.nav.map
       %li= link_to "Share Your Idea", root_url
-      %li= link_to "What's Hot", idea_search_path(:search => 'hot')
-      %li= link_to 'Recent Ideas', idea_search_path(:search => 'recent')
-      %li= link_to 'Nearby Ideas', map_path
+      %li= link_to "What's Hot", search_ideas_path(:search => 'hot')
+      %li= link_to 'Recent Ideas', search_ideas_path(:search => 'recent')
   %div
     %h4 Look Around
     %ul.nav.map
-      %li= link_to 'Comments', comments_path
+      %li= link_to 'Currets', currents_path
       %li= link_to 'Tags', tags_path
   %div
     %h4 Get to Know Us
     %ul.nav.map
-      %li= link_to "About BBYIDX", home_path('about')
-      %li= link_to "Contact", home_path('contact')
+      %li= link_to "About BBYIDX", home_about_path
+      %li= link_to "Contact", home_contact_path
 %ul.nav.supp
   %li= link_to "Terms of Use", home_path('terms-of-use')
 %p.credit
