Fix element id name
Change element id back to BBYIDX equivalent so it gets its CSS rules
applied to it.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
   %body
     #wrap
       = render :partial => 'layouts/header'
-      #main_content
+      #content
         = render :partial => 'layouts/flash_messages'
         = yield
       - cache 'footer' do
