Fix footer link typo

--- a/app/views/custom/_custom_footer.html.haml
+++ b/app/views/custom/_custom_footer.html.haml
@@ -8,7 +8,7 @@
   %div
     %h4 Look Around
     %ul.nav.map
-      %li= link_to 'Currets', currents_path
+      %li= link_to 'Currents', currents_path
       %li= link_to 'Tags', tags_path
   %div
     %h4 Get to Know Us
