Fix location of ToU link in custom footer

--- a/app/views/custom/_custom_footer.html.haml
+++ b/app/views/custom/_custom_footer.html.haml
@@ -15,8 +15,7 @@
     %ul.nav.map
       %li= link_to "About BBYIDX", home_about_path
       %li= link_to "Contact", home_contact_path
-%ul.nav.supp
-  / # %li= link_to "Terms of Use", home_path('terms-of-use')
+      %li= link_to "Terms of Use", home_tou_path
 %p.credit
   Powered by
   = link_to "Best Buy", "http://bestbuy.com", :target => "_blank"
