Update Voting partial
  - Idea is assigned as a local variable, not an instanced one
  - Show the idea's rating in the voting partial
    * TODO: Ensure idea ratings aren't being shown in idea/show views

--- a/app/views/votes/_vote.html.haml
+++ b/app/views/votes/_vote.html.haml
@@ -1,15 +1,20 @@
-- if user_signed_in?
-  - if @user_vote
-    - if @user_vote.value == 1
-      = button_to 'Delete Vote', remove_idea_vote_path(@idea), :method => :delete
-    - else
-      = button_to 'Vote Up', change_idea_vote_path(@idea, :value => 1), :method => :patch
-  - else
-    = button_to 'Vote Up', create_idea_vote_path(@idea, :value => 1), :method => :post
-  - if @user_vote
-    - if @user_vote.value == -1
-      = button_to 'Delete Vote', remove_idea_vote_path(@idea), :method => :delete
-    - else
-      = button_to 'Vote Down', change_idea_vote_path(@idea, :value => -1), :method => :patch
-  - else
-    = button_to 'Vote Down', create_idea_vote_path(@idea, :value => -1), :method => :post
+%ul.vote
+  %li.vote_count
+    = h "#{idea.rating}"
+    %span.points= h "#{'vote'.pluralize(idea.rating)}"
+  %li.vote-for-it
+    - if user_signed_in?
+      - if @user_vote
+        - if @user_vote.value == 1
+          = button_to 'Delete Vote', remove_idea_vote_path(idea), :method => :delete
+        - else
+          = button_to 'Vote Up', change_idea_vote_path(idea, :value => 1), :method => :patch
+      - else
+        = button_to 'Vote Up', create_idea_vote_path(idea, :value => 1), :method => :post
+      - if @user_vote
+        - if @user_vote.value == -1
+          = button_to 'Delete Vote', remove_idea_vote_path(idea), :method => :delete
+        - else
+          = button_to 'Vote Down', change_idea_vote_path(idea, :value => -1), :method => :patch
+      - else
+        = button_to 'Vote Down', create_idea_vote_path(idea, :value => -1), :method => :post
