Assign '@idea' to the local variable 'idea'
Pass in the idea to render voting information for from the Idea's
'show' view.

--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -26,7 +26,7 @@
         %div
           %ul.entry-meta
             %li.votes
-              %div= render :partial => 'votes/vote'
+              %div= render :partial => 'votes/vote', :locals => { :idea => @idea }
             %li.tags
               %h3 Tags
               - @idea.tags.each do |tag|
