Add Idea status handling and validation
Validate that an Idea always has a status from the possible states.
Show an idea's status in its 'show' view.

--- a/app/views/ideas/show.html.haml
+++ b/app/views/ideas/show.html.haml
@@ -17,7 +17,7 @@
           %strong= link_to h(@idea.current.title), current_path(@idea.current)
           %br
         Status:
-        %strong= # @idea.status
+        %strong= @idea.status
 
     .body
       .entry-content
