--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -67,7 +67,7 @@
               Popular
             %ul.actions
           .body.ideas
-            = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'popular', :page_size => 5)
+            = render :partial => 'home/idea', :collection => popular_ideas(5), :as => :idea
           .footer
             .pagination
               = link_to 'More', search_ideas_path(:search => 'popular')
@@ -79,7 +79,7 @@
             / %ul.actions
             /   %li= link_to image_tag("icn/16-sq-rss.png", :alt => "Subscribe to these ideas"), "/ideas.rss"
           .body.ideas
-            = render :partial => 'ideas/idea_teaser', :collection => search_ideas(:search => 'new', :page_size => 5)
+            = render :partial => 'home/idea', :collection => recent_ideas(5), :as => :idea
           .footer
             .pagination
               = link_to 'More', search_ideas_path(:search => 'new')
