--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -83,3 +83,15 @@
           .footer
             .pagination
               = link_to 'More', search_ideas_path(:search => 'new')
+      / .ideas-group
+      /   #recent-ideas.panel.summary.hfeed
+      /     .header
+      /       %h3.icon.recent
+      /         Coming Soon
+      /       / %ul.actions
+      /       /   %li= link_to image_tag("icn/16-sq-rss.png", :alt => "Subscribe to these ideas"), "/ideas.rss"
+      /     .body.ideas
+      /       = render :partial => 'home/idea', :collection => accepted_ideas(5), :as => :idea
+      /     .footer
+      /       .pagination
+      /         = link_to 'More', search_ideas_path(:search => 'new')
