--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,30 +1,34 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  %div
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  %div
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  %div
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  %div= f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+%div
+  .main.panel.section
+    .header
+      %h2 Edit Your Account
+    .body
+      .group
+        = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+          = devise_error_messages!
+          .form-group.inline
+            = f.label :name
+            = f.text_field :name, autofocus: true, :class => "input-text big"
+          .form-group.inline
+            = f.label :email
+            = f.email_field :email, :class => "input-text big"
+          - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+            %div
+              Currently waiting confirmation for: #{resource.unconfirmed_email}
+          .form-group.inline
+            = f.label :password
+            = f.password_field :password, autocomplete: "off", :class => "input-text big"
+            %p.note (leave blank if you don't want to change it)
+          .form-group.inline
+            = f.label :password_confirmation
+            = f.password_field :password_confirmation, autocomplete: "off", :class => "input-text big"
+          .form-group.inline
+            = f.label :current_password
+            = f.password_field :current_password, autocomplete: "off", :class => "input-text big"
+            %p.note (we need your current password to confirm your changes)
+          .form-submit-inline
+            = f.submit "Update", :id => "submit-signup", :class => "input-submit"
+        %h3 Cancel my account
+        %p
+          Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
+        = link_to "Back", :back
