Make Devise unlock email field use application CSS

--- a/app/views/users/unlocks/new.html.haml
+++ b/app/views/users/unlocks/new.html.haml
@@ -7,7 +7,7 @@
         = devise_error_messages!
         .form-group.inline
           = f.label :email
-          = f.email_field :email, autofocus: true
+          = f.email_field :email, autofocus: true, :class => "input-text big"
         .form-submit-inline
           = f.submit "Resend unlock instructions", :id => "submit-signup", :class => "input-submit"
       = render "users/shared/links"
