--- a/app/views/users/passwords/edit.html.haml
+++ b/app/views/users/passwords/edit.html.haml
@@ -1,14 +1,18 @@
-%h2 Change your password
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  = f.hidden_field :reset_password_token
-  %div
-    = f.label :password, "New password"
-    %br/
-    = f.password_field :password, autofocus: true, autocomplete: "off"
-  %div
-    = f.label :password_confirmation, "Confirm new password"
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  %div= f.submit "Change my password"
-= render "users/shared/links"
+%div
+  .main.panel.section
+    .header
+      %h2 Change your password
+    .body
+      .group
+        = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+          = devise_error_messages!
+          = f.hidden_field :reset_password_token
+          .form-group.inline
+            = f.label :password, "New password"
+            = f.password_field :password, autofocus: true, autocomplete: "off", :class => "input-text big"
+          .form-group.inline
+            = f.label :password_confirmation, "Confirm new password"
+            = f.password_field :password_confirmation, autocomplete: "off", :class => "input-text big"
+          .form-submit.inline
+            = f.submit "Change my password", :id => "submit-signup", :class => "input-submit"
+        = render "users/shared/links"
