Fix CSS classes in some Devise views
Due to a typo, some Devise views are using the wrong (non-existant) CSS
class for form submission buttons. Fix the class name to use the proper
stylings.

--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -26,7 +26,7 @@
             = f.label :current_password
             = f.password_field :current_password, autocomplete: "off", :class => "input-text big"
             %p.note (we need your current password to confirm your changes)
-          .form-submit-inline
+          .form-submit.inline
             = f.submit "Update", :id => "submit-signup", :class => "input-submit"
         %h3 Cancel my account
         %p
