--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -34,6 +34,6 @@
               I agree to the
               = link_to 'terms of use', home_tou_path, :target => "_blank"
               == .
-          .form-submit-inline
+          .form-submit.inline
             = f.submit "Sign up", :id => "submit-signup", :class => "input-submit"
         = render "users/shared/links"
