--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -18,3 +18,8 @@
         - cache('no_user_nav') do
           %li= link_to "Sign Up", new_user_registration_path
           %li= link_to 'Log in', new_user_session_path
+      %li.last.search
+        = form_tag search_ideas_path, :method => :get, :id => 'idea_search_box' do
+          %label{ :for => "search_text" }
+            Search:
+          = text_field_tag 'search_text', params[:search_text]
