--- a/app/views/ideas/new.html.haml
+++ b/app/views/ideas/new.html.haml
@@ -1,1 +1,12 @@
-= render :partial => 'ideas/new'
+#intro.section
+  .header
+    - if user_signed_in?
+      %h3
+        %em Share Ideas Now
+    - else
+      %h3
+        %em Get Started Now
+        %small or
+        = link_to "Sign Up", new_user_registration_path
+  .body#submit-idea
+    = render :partial => 'ideas/new'
