--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -12,7 +12,7 @@
         them with the rest of the community.
       - if user_signed_in?
         %h3
-          %em Share Ideas Now
+          %em Share Your Ideas Now
       - else
         %h3
           = link_to "Sign Up", new_user_registration_path
@@ -52,7 +52,10 @@
         our Feedback
       .figure
         = image_tag "instruction-4-read-thumb.png", :alt => "Read our Feedback"
-        %p.legend= "We're posting in the comments and on #{link_to 'our blog', '#'}. Let's keep the conversation going."
+        %p.legend
+          We're posting in the comments and on
+          == #{link_to 'our blog', '#'}.
+          Let's keep the conversation going."
     %hr.hide
 
     #ideas.section
