Fix image link for showing idea submission button
Rails handles image assets differently since Rails 2 so the relative
path should not be included any more.

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -219,7 +219,7 @@ input, textarea {
 
 #intro .input-submit,
 #current .input-submit {
-  background-image: url(../images/form-submit-share-my-idea.png);
+  background-image: url(form-submit-share-my-idea.png);
   height: 40px;
   width: 166px; }
   #intro .input-submit:hover,
